# Topaz

./: .dockerignore  .gitignore  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  README.md  RELEASING.md  SECURITY.md  Topaz.sln  azure-local.sln  cloud.json  todo.json  version.json
.devcontainer/: devcontainer.json  docker-compose.yml  init-certs.sh  postCreate.sh  start-dns.sh  topaz.crt  topaz.key
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
Azure.Local.CLI/: Azure.Local.CLI.csproj  Internal.cs  Program.cs  TypeRegistrar.cs  TypeResolver.cs
Azure.Local.Host/: Azure.Local.Host.csproj  Host.cs
Azure.Local.Identity/: AzureLocalCredential.cs
Azure.Local.Service.KeyVault/: KeyVaultDataPlane.cs  KeyVaultEndpoint.cs  KeyVaultService.cs  ResourceProvider.cs
Azure.Local.Service.ResourceGroup/: Azure.Local.Service.ResourceGroup.csproj  Internals.cs  ResourceGroupControlPlane.cs  ResourceGroupEndpoint.cs  ResourceGroupService.cs  ResourceProvider.cs
Azure.Local.Service.Shared/: Azure.Local.Service.Shared.csproj  GlobalSettings.cs  IEndpointDefinition.cs  IServiceDefinition.cs  Protocol.cs  ResourceProviderBase.cs
Azure.Local.Service.Storage/: Azure.Local.Service.Storage.csproj  AzureStorageControlPlane.cs  AzureStorageService.cs  BlobEndpoint.cs  ErrorResponse.cs  ResourceProvider.cs  TableEndpoint.cs  TableResourceProvider.cs  TableServiceControlPlane.cs  TableServiceDataPlane.cs  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/topaz_sdk/: __init__.py  client.py  environment.py  helpers.py  identity.py
(+4044 files in other folders)
